@@ -2,45 +2,47 @@ package pro.sky;
 
 import org.springframework.stereotype.Service;
 
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.List;
+import java.util.*;
 
 @Service
 public class EmployeeService {
-    private static final int maxEmployees = 10;
-    private static final List<Employee> employees = new ArrayList<>();
+    private final int maxEmployees = 10;
+    private final Map<String, Employee> employees = new HashMap<>();
 
-    public static Employee add(String firstname, String lastName) {
-        Employee employee = new Employee(firstname, lastName);
-        if (employees.contains(employee)) {
+    public Employee add(String firstName, String lastName) {
+        String key = buildKey(firstName, lastName);
+        if (employees.containsKey(key)) {
             throw new EmployeeAlreadyAddedException();
         }
         if (employees.size() >= maxEmployees) {
             throw new EmployeeStorageIsFullException();
         }
-        employees.add(employee);
+        Employee employee = new Employee(firstName, lastName);
+        employees.put(key, employee);
         return employee;
     }
 
-    public Employee remove(String firstname, String lastName) {
-        Employee employee = new Employee(firstname, lastName);
-        if (!employees.contains(employee)) {
+    public Employee remove(String firstName, String lastName) {
+        String key = buildKey(firstName, lastName);
+        if (!employees.containsKey(key)) {
             throw new EmployeeNotFoundException();
         }
-        employees.remove(employee);
-        return employee;
+        return employees.remove(key);
     }
 
-    public Employee find(String firstname, String lastName) {
-        Employee employee = new Employee(firstname, lastName);
-        if (!employees.contains(employee)) {
+    public Employee find(String firstName, String lastName) {
+        String key = buildKey(firstName, lastName);
+        if (!employees.containsKey(key)) {
             throw new EmployeeNotFoundException();
         }
-        return employee;
+        return employees.get(key);
+    }
+
+    private String buildKey(String name, String surname) {
+        return name + " " + surname;
     }
 
     public List<Employee> findAll() {
-        return Collections.unmodifiableList(employees);
+        return List.copyOf(employees.values());
     }
 }
